fixed z-index

--- a/Gazodizel/src/scss/_common.scss
+++ b/Gazodizel/src/scss/_common.scss
@@ -64,7 +64,7 @@ section{
 	bottom: 0;
 	right: 0;
 	left: 0;
-	z-index: 10;
+	z-index: 1050;
 
 	@include max575{
 		position: initial;
